--- a/src/global.css
+++ b/src/global.css
@@ -21,19 +21,20 @@ body,
 
 /* width */
 ::-webkit-scrollbar {
-  width: 5px;
+  width: 5px !important;
+  height: 3px !important;
 }
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #f1f1f1;
+  background: #f1f1f1 !important;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #bec4c4;
+  background: #bec4c4 !important;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #555;
+  background: #555 !important;
 }
